# OTUS_PYTHON_BASIC_DP

./: .env  .gitignore  README.md  database.py  handlers.py  main.py  models.py  notifier.py  pyproject.toml  start.bat  start_test.bat
.github/workflows/: test.yml
src/: .env.example  config.py  database.py
src/migrations/: env.py
src/migrations/versions/: 79263d5a80fb_02_tasks_projects.py
src/models/: __init__.py  project.py  task.py  user.py
src/templates/: base.html
src/utils/: loguru_config.py  request_utils.py
taskflow/: .env.example  Dockerfile  README.md  alembic.ini  create_app.py  create_superuser.py  docker-compose.prod.yml  docker-compose.yml  main.py  start_test.bat  start_test_cov_report.bat
taskflow/src/admin/: __init__.py  access_token.py  authentication.py  converter.py  user.py
taskflow/src/core/: .env.example  __init__.py  async_session_wrapper.py  config.py  database.py  dependencies.py  security.py  ws_manager.py
taskflow/src/core/auth/: fastapi_users.py  session_user.py  transport.py  user_manager.py
taskflow/src/email_parser/: action.py  parser.py  reader.py  scheduler.py
taskflow/src/mailing/: __init__.py  send_assigned_on_project_email.py  send_assigned_task_email.py  send_comment_email.py  send_confirmed_email.py  send_email.py  send_verification_email.py
taskflow/src/migrations/: env.py
taskflow/src/models/: __init__.py  access_token.py  base.py  comment.py  email.py  project.py  task.py  user.py  user_project.py
taskflow/src/repositories/: __init__.py  base.py  comment_repository.py  email_repository.py  project_repository.py  task_repository.py  user_repository.py
taskflow/src/routers/: __init__.py
taskflow/src/schemas/: __init__.py  comment.py  email.py  project.py  task.py  user.py
taskflow/src/services/: __init__.py  auth_service.py  comment_service.py  project_service.py  task_service.py  user_service.py
taskflow/src/templates/: base.html  index.html  login.html  project_edit.html  projects.html
taskflow/src/utils/: __init__.py  jinja_templates.py  loguru_config.py  request_utils.py
taskflow/test/: conftest.py  test_auth.py  test_project.py  test_task.py  test_user.py  utils.py
taskflow/test/auth_user/: conftest.py  test_auth.py  test_user.py
taskflow/test/inventory/: conftest.py  test_comment.py  test_project.py  test_task.py
(+81 files in other folders)
