[project]
name = "otus-basic-python-dp"
version = "0.1.0"
description = "OTUS Python Basic 2026"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.3.1",
    "fastapi[standard]>=0.135.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic[all]>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.poetry]
package-mode = false
