[project]
name = "otus-basic-python-dp"
version = "0.1.0"
description = "OTUS Python Basic 2026"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=26.3.1",
    "deep-translator>=1.11.4",
    "fastapi-cache2>=0.2.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.135.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic[all]>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "sqladmin[full]>=0.26.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
